@@ -24,7 +24,7 @@ export MB_EMAIL_SMTP_PASSWORD=""
 export MEM_AVAILABLE=$(bin/jq .info.limits.memory /run/config.json)
 
 # Limit Heapsize
-export JAVA_TOOL_OPTIONS="-XX:+CMSClassUnloadingEnabled -XX:+UseConcMarkSweepGC -XX:MaxPermSize=${MEM_AVAILABLE}m -Xmx${MEM_AVAILABLE}m"
+export JAVA_TOOL_OPTIONS="-XX:MaxPermSize=${MEM_AVAILABLE}m -Xmx${MEM_AVAILABLE}m"
 
 # This ensures that the child process below gets stopped when Platform.sh kills this script.
 trap "trap - SIGTERM && kill -- -$$" SIGINT SIGTERM EXIT
